--- a/Autobot/aircon.storyboard
+++ b/Autobot/aircon.storyboard
@@ -12,7 +12,7 @@
         <!--Remote Controller View-->
         <scene sceneID="uep-bI-tjv">
             <objects>
-                <viewController storyboardIdentifier="RaspberryPi3Main" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tse-7F-mz4" customClass="RemoteControllerView" customModule="Autobot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="aircon" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tse-7F-mz4" customClass="RemoteControllerView" customModule="Autobot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GPm-hJ-kUJ"/>
                         <viewControllerLayoutGuide type="bottom" id="nhw-eh-Van"/>
