--- a/Autobot/aircon.storyboard
+++ b/Autobot/aircon.storyboard
@@ -122,7 +122,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qyD-op-dqU" customClass="LineChartView" customModule="Charts">
-                                <rect key="frame" x="0.0" y="77" width="414" height="434"/>
+                                <rect key="frame" x="0.0" y="77" width="414" height="522"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.001564681064" green="0.059898532929999998" blue="0.16380020980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
@@ -140,6 +140,9 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="roomTemperatureView" destination="qyD-op-dqU" id="b4t-0t-CLw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LXt-ZT-Ucc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
